# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  models.BaseResponse:
+  models.Response:
     properties:
       data: {}
       httpStatus:
@@ -128,11 +128,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Delete an answer
@@ -160,15 +160,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Edit an answer
@@ -191,11 +191,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Like an answer
@@ -218,11 +218,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       summary: Get answers for a question
       tags:
       - Answers
@@ -248,15 +248,15 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Create a new answer
@@ -280,27 +280,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       summary: Login a user
       tags:
       - Auth
@@ -322,19 +322,19 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       summary: Register a new user
       tags:
       - Auth
@@ -349,11 +349,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       summary: Fetch all questions
       tags:
       - Questions
@@ -374,11 +374,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       summary: Fetch question by ID
       tags:
       - Questions
@@ -399,11 +399,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Delete question
@@ -432,15 +432,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Edit question
@@ -463,11 +463,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Like question
@@ -491,15 +491,15 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Ask a question
@@ -523,15 +523,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Edit user profile
@@ -548,11 +548,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.BaseResponse'
+            $ref: '#/definitions/models.Response'
       security:
       - Bearer: []
       summary: Get user profile
