# internal/api/answers/handler.go
@@ -20,9 +20,9 @@ type Handler struct{}
 // @Security Bearer
 // @Param question_id path string true "Question ID"
 // @Param body body models.CreateAnswerValidation true "Answer information"
-// @Success 201 {object} models.BaseResponse
-// @Failure 400 {object} models.BaseResponse
-// @Failure 500 {object} models.BaseResponse
+// @Success 201 {object} models.Response
+// @Failure 400 {object} models.Response
+// @Failure 500 {object} models.Response
 // @Router /answer/{question_id}/answers [post]
 func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -32,10 +32,11 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	)
 
 	questionID := r.PathValue("question_id")
-	userID := r.Context().Value("userID")
+	userID := r.Context().Value(models.USER_CTX_KEY)
 
 	if err := json.NewDecoder(r.Body).Decode(&requestAnswer); err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		response := models.NewResponse(false, "Invalid JSON", http.StatusBadRequest, nil, nil)
+		response.Write(w)
 		return
 	}
 
@@ -46,20 +47,19 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if err := db.Create(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answer could not be created", http.StatusInternalServerError, nil, nil)
+		response.Write(w)
 		return
 	}
 
 	if err := db.Preload("User").First(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answer could not be created", http.StatusInternalServerError, nil, nil)
+		response.Write(w)
 		return
 	}
 
-	response := models.NewBaseResponse(true, "Answer created successfully", http.StatusCreated, dbAnswer.ToResponse())
-
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(response.ToJson())
-	w.WriteHeader(http.StatusCreated)
+	response := models.NewResponse(true, "Answer created successfully", http.StatusCreated, dbAnswer.ToResponse(), nil)
+	response.Write(w)
 }
 
 // Fetch answers godoc
@@ -69,8 +69,8 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Param question_id path string true "Question ID"
-// @Success 200 {object} models.BaseResponse
-// @Failure 500 {object} models.BaseResponse
+// @Success 200 {object} models.Response
+// @Failure 500 {object} models.Response
 // @Router /answer/{question_id}/answers [get]
 func (h *Handler) GetAnswers(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -81,15 +81,13 @@ func (h *Handler) GetAnswers(w http.ResponseWriter, r *http.Request) {
 	questionID := r.PathValue("question_id")
 
 	if err := db.Preload("User").Preload("Likes").Where("question_id = ?", questionID).Find(&dbAnswers).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answers could not be fetched", http.StatusInternalServerError, nil, nil)
+		response.Write(w)
 		return
 	}
 
-	response := models.NewBaseResponse(true, "Answers fetched successfully", http.StatusOK, models.MapToAnswerResponse(dbAnswers))
-
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(response.ToJson())
-	w.WriteHeader(http.StatusOK)
+	response := models.NewResponse(true, "Answers fetched successfully", http.StatusOK, models.MapToAnswerResponse(dbAnswers), nil)
+	response.Write(w)
 }
 
 // Like Answer godoc
@@ -100,8 +98,8 @@ func (h *Handler) GetAnswers(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Security Bearer
 // @Param answer_id path string true "Answer ID"
-// @Success 200 {object} models.BaseResponse
-// @Failure 500 {object} models.BaseResponse
+// @Success 200 {object} models.Response
+// @Failure 500 {object} models.Response
 // @Router /answer/{answer_id}/like [post]
 func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -111,7 +109,7 @@ func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 	)
 
 	answerID := r.PathValue("answer_id")
-	userID := r.Context().Value("userID").(uuid.UUID)
+	userID := r.Context().Value(models.USER_CTX_KEY).(uuid.UUID)
 
 	dbLike = models.AnswerLike{
 		AnswerID: uuid.MustParse(answerID),
@@ -120,25 +118,24 @@ func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 
 	if err := db.Where("answer_id = ? AND user_id = ?", answerID, userID).First(&dbLike).Error; err != nil {
 		if err := db.Create(&dbLike).Error; err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
+			response := models.NewResponse(false, "Answer could not be liked", http.StatusInternalServerError, nil, nil)
+			response.Write(w)
 			return
 		}
 
 		message = "Answer liked successfully"
 	} else {
 		if err := db.Delete(&dbLike).Error; err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
+			response := models.NewResponse(false, "Answer could not be unliked", http.StatusInternalServerError, nil, nil)
+			response.Write(w)
 			return
 		}
 
 		message = "Answer unliked successfully"
 	}
 
-	response := models.NewBaseResponse(true, message, http.StatusOK, nil)
-
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(response.ToJson())
-	w.WriteHeader(http.StatusOK)
+	response := models.NewResponse(true, message, http.StatusOK, nil, nil)
+	response.Write(w)
 }
 
 // Edit Answer godoc
@@ -150,9 +147,9 @@ func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 // @Security Bearer
 // @Param answer_id path string true "Answer ID"
 // @Param body body models.EditAnswerValidation true "Answer information"
-// @Success 200 {object} models.BaseResponse
-// @Failure 400 {object} models.BaseResponse
-// @Failure 500 {object} models.BaseResponse
+// @Success 200 {object} models.Response
+// @Failure 400 {object} models.Response
+// @Failure 500 {object} models.Response
 // @Router /answer/{answer_id} [put]
 func (h *Handler) Edit(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -162,30 +159,30 @@ func (h *Handler) Edit(w http.ResponseWriter, r *http.Request) {
 	)
 
 	answerID := r.PathValue("answer_id")
-	userID := r.Context().Value("userID").(uuid.UUID)
+	userID := r.Context().Value(models.USER_CTX_KEY).(uuid.UUID)
 
 	if err := json.NewDecoder(r.Body).Decode(&requestAnswer); err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		response := models.NewResponse(false, "Invalid JSON", http.StatusBadRequest, nil, nil)
+		response.Write(w)
 		return
 	}
 
 	if err := db.Where("id = ? AND user_id = ?", answerID, userID).First(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answer not found", http.StatusNotFound, nil, nil)
+		response.Write(w)
 		return
 	}
 
 	dbAnswer.EditAnswerCheckFields(requestAnswer)
 
 	if err := db.Save(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		resposnse := models.NewResponse(false, "Answer could not be edited", http.StatusInternalServerError, nil, nil)
+		resposnse.Write(w)
 		return
 	}
 
-	response := models.NewBaseResponse(true, "Answer edited successfully", http.StatusOK, dbAnswer.ToResponse())
-
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(response.ToJson())
-	w.WriteHeader(http.StatusOK)
+	response := models.NewResponse(true, "Answer edited successfully", http.StatusOK, dbAnswer.ToResponse(), nil)
+	response.Write(w)
 }
 
 // Delete Answer godoc
@@ -196,8 +193,8 @@ func (h *Handler) Edit(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Security Bearer
 // @Param answer_id path string true "Answer ID"
-// @Success 200 {object} models.BaseResponse
-// @Failure 500 {object} models.BaseResponse
+// @Success 200 {object} models.Response
+// @Failure 500 {object} models.Response
 // @Router /answer/{answer_id} [delete]
 func (h *Handler) Delete(w http.ResponseWriter, r *http.Request) {
 	var (
@@ -208,18 +205,17 @@ func (h *Handler) Delete(w http.ResponseWriter, r *http.Request) {
 	answerID := r.PathValue("answer_id")
 
 	if err := db.Where("id = ?", answerID).First(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answer not found", http.StatusNotFound, nil, nil)
+		response.Write(w)
 		return
 	}
 
 	if err := db.Delete(&dbAnswer).Error; err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		response := models.NewResponse(false, "Answer could not be deleted", http.StatusInternalServerError, nil, nil)
+		response.Write(w)
 		return
 	}
 
-	response := models.NewBaseResponse(true, "Answer deleted successfully", http.StatusOK, nil)
-
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(response.ToJson())
-	w.WriteHeader(http.StatusOK)
+	response := models.NewResponse(true, "Answer deleted successfully", http.StatusOK, nil, nil)
+	response.Write(w)
 }
